manifests/ingress-route.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: routines-microservice
  labels:
    app.kubernetes.io/name: routines-microservice
    app.kubernetes.io/part-of: application-layer
    app.kubernetes.io/component: ingress-route
    app.kubernetes.io/version: 1.0.0
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`api.getbud.co`) && PathPrefix(`/routines`)
      kind: Rule
      middlewares:
        - name: routines-microservice-replace-root-path
      services:
        - name: routines-microservice-stable
          port: 80
    - match: Host(`api.canary.getbud.co`) && PathPrefix(`/routines`)
      kind: Rule
      middlewares:
        - name: routines-microservice-replace-root-path
      services:
        - name: routines-microservice-canary
          port: 80
  tls:
    certResolver: letsencrypt
    options:
      name: tls-options
      namespace: traefik-proxy

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: routines-microservice-replace-root-path
spec:
  replacePathRegex:
    regex: ^/routines/(.*)
    replacement: /$1
